<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cormick.mailroomlogistics.NewParcelActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_parcel"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="119dp"
        android:layout_marginStart="119dp"
        android:text="@string/recepient"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_marginRight="92dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginEnd="92dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_signer"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="218dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        android:layout_marginRight="92dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="92dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:onClick="finished"
        android:text="@string/finished"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="103dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="28dp"
        android:text="@string/date_received"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="101dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="26dp"
        android:text="@string/date_delivered"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        android:layout_marginRight="92dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="92dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        android:layout_marginRight="92dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="92dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/tracking_number"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_editor_absoluteX="68dp" />

    <EditText
        android:id="@+id/trackingNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="122dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="92dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="scanClicked"
        android:text="@string/scan"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/trackingNumber"
        android:layout_marginRight="91dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="91dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="69dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="22dp"
        android:text="@string/is_damaged"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Spinner
        android:id="@+id/damagedSpinner"
        android:layout_width="114dp"
        android:layout_height="33dp"
        app:layout_constraintLeft_toRightOf="@+id/textView11"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        android:layout_marginStart="21dp"
        android:layout_marginTop="-11dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="16dp"
        android:text="@string/carrier_barcode_type"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Spinner
        android:id="@+id/carrierSpinner"
        android:layout_width="221dp"
        android:layout_height="34dp"
        app:layout_constraintLeft_toRightOf="@+id/textView12"
        android:layout_marginLeft="84dp"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        android:layout_marginTop="-13dp" />

    <Button
        android:id="@+id/getSignature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="91dp"
        android:layout_marginTop="18dp"
        android:text="@string/get_signature"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />
</android.support.constraint.ConstraintLayout>
