<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cormick.mailroomlogistics.viewBatch"
    tools:showIn="@layout/activity_view_batch">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/date_received"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/batch_date_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/date_received"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/date_delivered"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/batch_date_delivered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/date_received"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batch_date_received"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/destination"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/batch_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/destination"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/batch_date_delivered"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/batch_quantity"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/batch_number_parcels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/batch_quantity"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/batch_destination"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/getSignature_viewBatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_signature"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/signers_name_batch"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/default_signer"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/signers_name_batch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
        app:layout_constraintLeft_toRightOf="@+id/textView20"
        android:layout_marginStart="8dp" />

    <ListView
        android:id="@+id/parcelListView"
        android:layout_width="601dp"
        android:layout_height="360dp"
        android:layout_marginBottom="73dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="393dp"
        tools:layout_editor_absoluteX="-8dp"
        app:layout_constraintHorizontal_bias="0.529" />

</android.support.constraint.ConstraintLayout>
